--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,9 @@ plugins {
     id("com.google.gms.google-services")
 }
 
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
 android {
     namespace 'com.example.sendalarm'
     compileSdk 33
@@ -17,6 +20,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "FCM_SERVER_KEY", properties['fcm_server_key']
     }
 
     buildTypes {
@@ -37,6 +41,8 @@ android {
         viewBinding true
         dataBinding true
     }
+
+
 }
 
 dependencies {
